# memecoin-contract

./: Cargo.toml  README.md
src/: lib.rs
