[package]
name = "my_near_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

near-sdk = { version = "5.8.1", features = ["legacy"] }

borsh = "1.0.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
near-workspaces = { version = "0.16", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
anyhow = "1.0"
